nodejs/k8s/deployment-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
      - name: nodejs-app
        image: yourdockerhubusername/my-node-app:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: nodejs-storage
          mountPath: /usr/src/app/data
      volumes:
      - name: nodejs-storage
        persistentVolumeClaim:
          claimName: nodejs-pvc
