nodejs/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  type: NodePort
  selector:
    app: nodejs-app
  ports:
  - port: 5000
    targetPort: 5000
